--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
-# Compiled class file
-*.class
+   import java.util.Scanner;
+public class buyukKucuk {
+    public static void main(String[] args){
 
-# Log file
-*.log
+        Scanner input= new Scanner(System.in);
+        double a,b;
 
-# BlueJ files
-*.ctxt
+        System.out.print("1.Sayıyı Giriniz: ");
+        a= input.nextDouble();
+        System.out.print("2.Sayıyı Giriniz: ");
+        b= input.nextDouble();
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+       if(a<b) {
+           System.out.println("a<b'dir.");
+       } else {
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+            System.out.println("a>b'dir.");
+        }
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+    }
+}
